--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="description" content="Wedding Invitation" Secara Online />
     <meta name="theme-color" content="#212529" />
     <meta name="color-scheme" content="dark" />
+    <meta property="og:title" content="The Wedding Of Rian & Hera" />
+    <meta property="og:description" content="Rabu, 22 januari 2025" />
+    <meta property="og:image" content="assets/image/undangan.jpg" />
+    <meta property="og:url" content="https://www.canva.com/design/DAGbsl7vZ60/n4cbSbU4CKLjKSA9KcUFoQ/view?utm_content=DAGbsl7vZ60&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink&mode=preview" />
+    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin="anonymous" />
     <link rel="preconnect" href="https://undangan-api-gules.vercel.app" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous" />
@@ -352,11 +357,15 @@
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Logo_dana_blue.svg" class="img-fluid p-1 rounded" style="max-width: 9vh; background-color: var(--bs-gray-300);" alt="bca">
 
           <div class="d-flex justify-content-between align-items-center mt-2">
-              <p class="m-0 p-0" style="font-size: 0.95rem;">---- ---- ---- 4567</p>
+              <p class="m-0 p-0" style="font-size: 0.95rem;">+6285703487668</p>
               <!-- Ubah juga data-copy sesuai dengan no rekening -->
-              <button class="btn btn-outline-dark btn-sm shadow-sm rounded-4 text-white copy-btn" style="font-size: 0.75rem;" data-copy="1234567891234567" onclick="undangan.util.copy(this, 'Tersalin')">
-                  <i class="fa-solid fa-copy me-1"></i> Salin
-              </button>
+              <button class="btn btn-outline-dark btn-sm shadow-sm rounded-4 text-white copy-btn" 
+              style="font-size: 0.75rem;" 
+              data-copy="085703487668" 
+              onclick="undangan.util.copy(this, 'Tersalin')">
+        <i class="fa-solid fa-copy me-1"></i> Salin
+      </button>
+      
           </div>
           <p class="mt-2 mb-0 p-0" style="font-size: 0.95rem;">An.Herawati Nursafitri</p>
       </div>
