--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rian dan Hera</title>
-    <meta name="title" content="Undangan Khitanan Muhammad Arifa" />
     <meta name="description" content="Wedding Invitation" Secara Online />
     <meta name="theme-color" content="#212529" />
     <meta name="color-scheme" content="dark" />
@@ -116,11 +115,13 @@
 
         <div class="overflow-x-hidden pb-4">
 
-            <div data-aos="fade-right" data-aos-duration="2000">
-                <img src="./assets/images/p.png" alt="cowo" onclick="undangan.guest.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
-                <h2 class="font-esthetic m-0" style="font-size: 2rem;">Rian Sudirman</h2>
-                <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putra ke-1</p>
-                <p class="mb-0" style="font-size: 0.95rem;">Bapak Ajan dan Ibu Asih</p>
+            <div data-aos="fade-left" data-aos-duration="2000">
+              <img src="./assets/images/w.png" alt="cewe" onclick="undangan.guest.modal(this)" 
+              class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto" 
+              style="width: 120px; height: 120px;">
+                          <h2 class="font-esthetic m-0" style="font-size: 2rem;">Herawati Nursafitri</h2>
+                <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putri Bungsu</p>
+                <p class="mb-0" style="font-size: 0.95rem;">Bapak.Hj Sidkin dan Ibu.Hj Maskanah</p>
             </div>
 
             <!-- Love animation -->
@@ -143,11 +144,13 @@
                 </div>
             </div>
 
-            <div data-aos="fade-left" data-aos-duration="2000">
-                <img src="./assets/images/w.png" alt="cewe" onclick="undangan.guest.modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto">
-                <h2 class="font-esthetic m-0" style="font-size: 2rem;">Herawati Nursafitri</h2>
-                <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putri Bungsu</p>
-                <p class="mb-0" style="font-size: 0.95rem;">Bapak.Hj Sidkin dan Ibu.Hj Maskanah</p>
+            <div data-aos="fade-right" data-aos-duration="2000">
+              <img src="./assets/images/p.png" alt="cowo" onclick="undangan.guest.modal(this)" 
+              class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto" 
+              style="width: 120px; height: 120px;">
+                          <h2 class="font-esthetic m-0" style="font-size: 2rem;">Rian Sudirman</h2>
+                <p class="mt-3 mb-1" style="font-size: 1.25rem;">Putra ke-1</p>
+                <p class="mb-0" style="font-size: 0.95rem;">Bapak Ajan dan Ibu Asih</p>
             </div>
         </div>
 
@@ -269,76 +272,6 @@
             </div>
         </div>
     </section>
-
-  <!-- Gallery -->
-  <section class="bg-black pb-5 pt-4" id="gallery">
-    <div class="container">
-        <div class="border rounded-5 shadow p-3">
-
-            <h2 class="font-esthetic text-center py-2 m-0" style="font-size: 2.5rem;">Galeri</h2>
-
-            <div id="carousel-image-one" data-aos="fade-up" data-aos-duration="1500" class="carousel slide mt-4" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carousel-image-one" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carousel-image-one" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carousel-image-one" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-
-                <div class="carousel-inner rounded-4">
-                    <div class="carousel-item active">
-                        <img src="https://picsum.photos/1280/720?random=1" alt="image 1" class="d-block w-100" onclick="undangan.guest.modal(this)">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://picsum.photos/1280/720?random=2" alt="image 2" class="d-block w-100" onclick="undangan.guest.modal(this)">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://picsum.photos/1280/720?random=3" alt="image 3" class="d-block w-100" onclick="undangan.guest.modal(this)">
-                    </div>
-                </div>
-
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-image-one" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel-image-one" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-
-            <div id="carousel-image-two" data-aos="fade-up" data-aos-duration="1500" class="carousel slide mt-4" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-
-                <div class="carousel-inner rounded-4">
-                    <div class="carousel-item active">
-                        <img src="https://picsum.photos/1280/720?random=4" alt="image 4" class="d-block w-100" onclick="undangan.guest.modal(this)">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://picsum.photos/1280/720?random=5" alt="image 5" class="d-block w-100" onclick="undangan.guest.modal(this)">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://picsum.photos/1280/720?random=6" alt="image 6" class="d-block w-100" onclick="undangan.guest.modal(this)">
-                    </div>
-                </div>
-
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-image-two" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel-image-two" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!-- Love Gift -->
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
