--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="color-scheme" content="dark" />
     <meta property="og:title" content="The Wedding Of Rian & Hera" />
     <meta property="og:description" content="Rabu, 22 januari 2025" />
-    <meta property="og:image" content="assets/image/undangan.jpg" />
-    <meta property="og:url" content="https://www.canva.com/design/DAGbsl7vZ60/n4cbSbU4CKLjKSA9KcUFoQ/view?utm_content=DAGbsl7vZ60&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink&mode=preview" />
+    <meta property="og:image" content="https://ibb.co.com/RNRydjC" />
+    <meta property="og:url" content="https://ibb.co.com/RNRydjC" />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin="anonymous" />
     <link rel="preconnect" href="https://undangan-api-gules.vercel.app" crossorigin="anonymous" />
