--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
           >
             <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
           </a>
+          <div class="mt-4 border rounded-pill shadow py-2 px-4 mx-2 mb-4">
+            <div class="row justify-content-center" data-waktu="2025-01-22 08:00:00" id="tampilan-waktu">
+              <div class="col-3 p-1">
+                <h2 class="d-inline m-0 p-0" id="hari">0</h2>
+                <small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
+              </div>
+              <div class="col-3 p-1">
+                <h2 class="d-inline m-0 p-0" id="jam">0</h2>
+                <small class="ms-1 me-0 my-0 p-0 d-inline">Jam</small>
+              </div>
+              <div class="col-3 p-1">
+                <h2 class="d-inline m-0 p-0" id="menit">0</h2>
+                <small class="ms-1 me-0 my-0 p-0 d-inline">Menit</small>
+              </div>
+              <div class="col-3 p-1">
+                <h2 class="d-inline m-0 p-0" id="detik">0</h2>
+                <small class="ms-1 me-0 my-0 p-0 d-inline">Detik</small>
+              </div>
+            </div>
+          </div>
           <div class="d-flex justify-content-center align-items-center mt-4 mb-2">
             <div class="mouse-animation border border-secondary-subtle border-2 rounded-5 px-2 py-1">
               <div class="scroll-animation rounded-4 bg-secondary"></div>
@@ -197,28 +217,7 @@
 
       <section class="bg-black pb-2" id="wedding-date">
         <div class="container text-center">
-            <h2 class="font-esthetic py-4 m-0" style="font-size: 2.5rem;">Moment Bahagia</h2>
-
-            <div class="border rounded-pill shadow py-2 px-4 mx-2 mb-4">
-              <div class="row justify-content-center" data-waktu="2025-01-22 08:00:00" id="tampilan-waktu">
-                <div class="col-3 p-1">
-                  <h2 class="d-inline m-0 p-0" id="hari">0</h2>
-                  <small class="ms-1 me-0 my-0 p-0 d-inline">Hari</small>
-                </div>
-                <div class="col-3 p-1">
-                  <h2 class="d-inline m-0 p-0" id="jam">0</h2>
-                  <small class="ms-1 me-0 my-0 p-0 d-inline">Jam</small>
-                </div>
-                <div class="col-3 p-1">
-                  <h2 class="d-inline m-0 p-0" id="menit">0</h2>
-                  <small class="ms-1 me-0 my-0 p-0 d-inline">Menit</small>
-                </div>
-                <div class="col-3 p-1">
-                  <h2 class="d-inline m-0 p-0" id="detik">0</h2>
-                  <small class="ms-1 me-0 my-0 p-0 d-inline">Detik</small>
-                </div>
-              </div>
-            </div>
+            <h2 class="font-esthetic py-4 m-0" style="font-size: 2.5rem;">Moment Bahagia Kami</h2>
 
             <p class="py-2 m-0" style="font-size: 0.95rem;">Dengan memohon rahmat dan ridho Allah Subhanahu Wa Ta'ala, insyaAllah kami akan menyelenggarakan acara:</p>
 
@@ -238,11 +237,10 @@
                 </div>
                 <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                   <h2 class="font-esthetic m-0 py-2" style="font-size: 0,1rem;">Acara Lainnya</h2>
-                  <p style="font-size: 0.95rem;">Pengajian Walimatul Ursy, Pukul 18:00 PM sd Selesai</p>
+                  <p style="font-size: 0.95rem;">Pengajian Walimatul Ursy, Pukul 18:00 PM sd Selesai <br>bertempat di kediaman mempelai wanita</p>
               </div>
             </div>
 
-            <p class="py-2 m-0" style="font-size: 0.95rem;">Demi kehangatan bersama, kami memohon kesediaan Anda untuk mengenakan dress code berikut:</p>
 
             <!-- Love animation -->
             <div class="position-relative">
@@ -251,11 +249,6 @@
                         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                     </svg>
                 </div>
-            </div>
-
-            <div class="py-2" data-aos="fade-down" data-aos-duration="1500">
-                <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem;">Batik</h2>
-                <p style="font-size: 0.95rem;">Dominasi berwarna hitam</p>
             </div>
 
             <div class="py-2" data-aos="fade-down" data-aos-duration="1500">
