--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               loading="lazy" 
               referrerpolicy="no-referrer-when-downgrade">
           </iframe>
-                          <a href="https://maps.app.goo.gl/P6drfy1AehpY8L4G6" target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
-                <small class="d-block my-1">Kp.Tipar, Ds.Cijati, Kec.Cijati, Kab.Cianjur</small>
+                          <a href="https://maps.app.goo.gl/MT4NxrNpktGh6Egz5 " target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
+                <small class="d-block my-1">Kp.Tipar,Tegalnyolok,Rt.02/Rw.04,Ds.Cijati,Kec.Cijati,Kab.Cianjur</small>
             </div>
         </div>
     </section>
@@ -308,7 +308,7 @@
         <div class="container mt-3" data-aos="fade-up" data-aos-duration="1500">
             <div class="border rounded-4 py-2 px-4 mx-2 mb-4">
               <h1 class="text-center">Turut Mengundang</h1>
-              <p class="text-light">1. Bpk Kh Mukhlis Munawar (Pp.Aljazilah)<br>2. Bpk Kh.Mukarom (Pp.Al-Mukaromah) <br>3. Abuya Hasan (Pimpinan Majlis Attawab) <br>4. Bpk Kyai Mukhtar Fauzi <br>5. Bpk.H Sulaiman (Cengek) <br>6. Bpk. Badru <br>7. Bpk. Badri <br>8. Bpk. Asep (Bpk Kades)</p>
+              <p class="text-light">1. Bpk Kh Mukhlis Munawar (Pp.Aljazilah)<br>2. Bpk Kh.Mukarom (Pp.Al-Mukaromah) <br>3. Abuya Hasan (Pimpinan Majlis Attawabin) <br>4. Bpk Kyai Mukhtar Fauzi <br>5. Bpk.H Sulaiman (Cengek) <br>6. Bpk. Badru <br>7. Bpk. Badri <br>8. Bpk. Asep (Bpk Kades)</p>
             </div>
           </div>
 
