--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
               referrerpolicy="no-referrer-when-downgrade">
           </iframe>
                           <a href="https://maps.app.goo.gl/MT4NxrNpktGh6Egz5 " target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
-                <small class="d-block my-1">Kp.Tipar,Tegalnyolok,Rt.02/Rw.04,Ds.Cijati,Kec.Cijati,Kab.Cianjur</small>
+                <small class="d-block my-1">Kp.Tipar,Tegalnyolok,Rt.02/Rw.04,<br>Ds.Cijati,Kec.Cijati,Kab.Cianjur</small>
             </div>
         </div>
     </section>
