--- a/index.html
+++ b/index.html
@@ -252,15 +252,22 @@
             </div>
 
             <div class="py-2" data-aos="fade-down" data-aos-duration="1500">
-              <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.757510084289!2d107.0284531!3d-7.268412499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e686e3e89f3bf13%3A0x77a6f34eaba734c4!2sP2JH%2BJ9P%2C%20Cijati%2C%20Kec.%20Cijati%2C%20Kabupaten%20Cianjur%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1736511307491!5m2!1sid!2sid" 
-              width="300" 
-              height="200" 
-              style="border:0;" 
-              allowfullscreen="" 
-              loading="lazy" 
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+              <div style="width: 100%; max-width: 200px; margin: auto; padding: 10px; border: 2px solid #dcdfe4; border-radius: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.757510084289!2d107.0284531!3d-7.268412499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e686e3e89f3bf13%3A0x77a6f34eaba734c4!2sP2JH%2BJ9P%2C%20Cijati%2C%20Kec.%20Cijati%2C%20Kabupaten%20Cianjur%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1736511307491!5m2!1sid!2sid" 
+                style="
+                  border: 0; 
+                  border-radius: 15px; 
+                  width: 100%; 
+                  height: 120px; 
+                  overflow: hidden;
+                " 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+              </div>
+              
             
                           <a href="https://maps.app.goo.gl/MT4NxrNpktGh6Egz5 " target="_blank" class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3"><i class="fa-solid fa-map-location-dot me-2"></i>Lihat Google Maps</a>
                 <small class="d-block my-1">Kp.Tipar,Tegalnyolok,Rt.02/Rw.04,<br>Ds.Cijati,Kec.Cijati,Kab.Cianjur</small>
